@@ -78,7 +78,7 @@ public class FollowersDataSource {
         long id = user.getId();
         String screenName = user.getScreenName();
         String name = user.getName();
-        String proPicUrl = user.getBiggerProfileImageURL();
+        String proPicUrl = user.getOriginalProfileImageURL();
 
         values.put(FollowersSQLiteHelper.COLUMN_ACCOUNT, account);
         values.put(FollowersSQLiteHelper.COLUMN_ID, id);
